【修改】优化banner样式

--- a/static/src/css/header.css
+++ b/static/src/css/header.css
@@ -283,6 +283,7 @@ body {
 }
 .r-side-box .r-side-cont li .go-top {
   font-size: 14px;
+  padding: 7px 0;
 }
 .r-side-box .r-side-cont li .go-top span {
   margin: 0 auto;
