--- a/static/src/less/header.less
+++ b/static/src/less/header.less
@@ -254,6 +254,7 @@ body{overflow-x: hidden;}
       }
       .go-top{
         font-size: 14px;
+        padding: 7px 0;
         span{
           margin:0 auto;
           .triangle-top(9, 5, #fff);
