--- a/static/src/css/index.css
+++ b/static/src/css/index.css
@@ -152,50 +152,47 @@
   }
 }
 .banner {
-  position: relative;
   width: 100%;
   height: 340px;
-  background-color: red;
 }
 .banner-main {
+  position: relative;
+  z-index: 100;
   margin: 0 auto;
   width: 1190px;
 }
-.banner-pannel {
-  float: left;
-  width: 100%;
-  height: 340px;
-  overflow: hidden;
-  background-color: red;
-}
-.banner-pannel .banner-cont {
+.banner-panel {
   position: relative;
-  margin-left: 590px;
-  width: 800px;
+  width: 100%;
 }
-.banner-pannel .banner-cont ul {
-  _position: relative;
-  margin-left: -400px;
-  width: 800px;
-  height: 340px;
-  overflow: hidden;
-  background-color: #e1e1e1;
-}
-.banner-pannel .banner-cont ul li {
-  float: left;
-}
-.banner-pannel .banner-cont ul li a {
-  display: inline-block;
+.banner-item {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 340px;
 }
-.banner-pannel .banner-cont .b-tab {
-  position: absolute;
-  bottom: 10px;
-  left: 0;
-  margin-left: -78px;
+.banner-item .banner-item-ct {
+  margin: 0 auto;
+  padding-left: 190px;
+  width: 1000px;
+  height: 340px;
+  overflow: hidden;
 }
-.banner-pannel .banner-cont .b-tab a {
+.banner-item-cur {
+  z-index: 10;
+}
+.b-tab-box {
+  position: relative;
+  z-index: 11;
+}
+.b-tab-box .b-tab {
+  position: absolute;
+  top: 310px;
+  left: 50%;
+  margin-left: -83px;
+}
+.b-tab-box .b-tab a {
   display: inline-block;
   margin-right: 10px;
   width: 20px;
@@ -205,14 +202,14 @@
   text-align: center;
   color: #fff;
 }
-.banner-pannel .banner-cont .b-tab a:hover {
+.b-tab-box .b-tab a:hover {
+  background-color: #c40000;
+}
+.b-tab-box .b-tab .b-tab-cur {
   background-color: #c40000;
 }
 .sider {
-  position: relative;
   float: left;
-  margin-left: -100%;
-  _margin-left: -1190px;
   width: 190px;
   height: 340px;
   background-color: #faf1f2;
@@ -238,7 +235,6 @@
 }
 .sider .sider-type {
   position: relative;
-  z-index: 11;
   background-color: #fff;
 }
 .sider .sider-type a {
@@ -281,7 +277,6 @@
   position: absolute;
   top: 0;
   left: 190px;
-  z-index: 10;
   display: none;
   width: 102px;
   height: 337px;
@@ -307,9 +302,7 @@
   display: block;
 }
 .small-banner {
-  position: relative;
-  float: left;
-  margin-left: -200px;
+  float: right;
   width: 200px;
   height: 340px;
 }
