--- a/static/src/css/index.css
+++ b/static/src/css/index.css
@@ -154,6 +154,7 @@
 .banner {
   width: 100%;
   height: 340px;
+  background-color: #dcdcdc;
 }
 .banner-main {
   position: relative;
@@ -169,6 +170,8 @@
   position: absolute;
   top: 0;
   left: 0;
+  display: none;
+  opacity: 0;
   width: 100%;
   height: 340px;
 }
