--- a/static/src/less/index.less
+++ b/static/src/less/index.less
@@ -158,6 +158,7 @@
 .banner {
     width: 100%;
     height: 340px;
+    background-color: #dcdcdc;
 }
 .banner-main {
     position: relative;
@@ -173,6 +174,8 @@
     position:absolute;
     top:0;
     left:0;
+    display:none;
+    opacity:0;
     width: 100%;
     height: 340px;
     .banner-item-ct{
