--- a/static/src/less/header.less
+++ b/static/src/less/header.less
@@ -315,14 +315,12 @@ body{overflow-x: hidden;}
                 width: 80px;
             }
         }
-
-        .banner-main{
-            width: 990px;
-
-           .banner-pannel .banner-cont{ margin-left: 490px; }
+        .banner-item .banner-item-ct{ 
+          width: 800px;
+          img{
+            margin-left: -95px;
+          }
         }
-
-        .sider{_margin-left: -990px;}
 
         .new-goods .goods-cont-item .md-warp-cont{ width: 800px; }
 
