--- a/static/src/less/index.less
+++ b/static/src/less/index.less
@@ -164,7 +164,6 @@
     position: relative;
     z-index: 100;
     margin: 0 auto;
-    width: 1190px;
 }
 .banner-panel{
     position:relative;
@@ -175,7 +174,6 @@
     top:0;
     left:0;
     display:none;
-    opacity:0;
     width: 100%;
     height: 340px;
     .banner-item-ct{
@@ -185,8 +183,16 @@
         height: 340px;
         overflow: hidden;
     }
-    &-cur{
-        z-index: 10;
+    &-cur img{
+        animation:scaleImg 3s linear;
+    }
+}
+@keyframes scaleImg{
+    0%{
+        transform:scale(1.1);
+    }
+    100%{
+        transform:scale(1);
     }
 }
 .b-tab-box{
@@ -292,6 +298,7 @@
         padding:3px 5px 0 12px;
         background-color: #000;
         background-color: rgba(0, 0, 0, 0.8);
+        _background-color: #000;
         filter: alpha(opacity=80);
         transition:transform .7s ease;
         a{
@@ -357,7 +364,7 @@
         height: 122px;
         overflow: hidden;
         font-family: \5FAE\8F6F\96C5\9ED1;
-        background-color: #fdf3f6;
+        background-color: #fff;
         &-tab{
             width: 201px;
             height:36px;
@@ -372,7 +379,7 @@
                 text-align: center;
                 white-space: nowrap;
                 &:hover{
-                    background-color: #fdf3f6;
+                    background-color: #fff;
                 }
             }
             .cur{
@@ -387,6 +394,17 @@
             }
         }
     }
+}
+.ie7 .sider,.ie6 .sider{
+    position:absolute;
+    top:0;
+    left:0;
+}
+
+.ie7 .small-banner,.ie6 .small-banner{
+    position:absolute;
+    top:0;
+    right:0;
 }
 
 .warp {
