--- a/static/src/less/header.less
+++ b/static/src/less/header.less
@@ -3,11 +3,11 @@
 
 @font-face {
   font-family: 'iconfont';
-  src: url('//at.alicdn.com/t/font_1428890355_2089026.eot'); /* IE9*/
-  src: url('//at.alicdn.com/t/font_1428890355_2089026.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('//at.alicdn.com/t/font_1428890355_2089026.woff') format('woff'), /* chrome、firefox */
-  url('//at.alicdn.com/t/font_1428890355_2089026.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-  url('//at.alicdn.com/t/font_1428890355_2089026.svg#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('//at.alicdn.com/t/font_1433734549_990871.eot'); /* IE9*/
+  src: url('//at.alicdn.com/t/font_1433734549_990871.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('//at.alicdn.com/t/font_1433734549_990871.woff') format('woff'), /* chrome、firefox */
+  url('//at.alicdn.com/t/font_1433734549_990871.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+  url('//at.alicdn.com/t/font_1433734549_990871.svg#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont{
@@ -306,12 +306,12 @@ body{overflow-x: hidden;}
     .w990(){
 
         .header,.md-warp{
-            width: 990px;
+          width: 990px;
         }
 
         .nav-md{
-            width: 800px;
-           ul li{
+          width: 800px;
+          ul li{
                 width: 80px;
             }
         }
@@ -322,9 +322,9 @@ body{overflow-x: hidden;}
           }
         }
 
-        .new-goods .goods-cont-item .md-warp-cont{ width: 800px; }
+        .new-goods .goods-cont-item .md-warp-cont{ width: 800px;}
 
-        .floor-md .md-warp-cont{ width:400px; }
+        .floor-md .md-warp-cont-list{width:800px;}
 
         .expert-save{
             width: 590px;
