--- a/static/src/less/layout_md.less
+++ b/static/src/less/layout_md.less
@@ -74,10 +74,13 @@
 
     /*公共商品列表样式*/
     .md-f-cont(){
-        .md-warp-cont {
-            float: left;
+        .md-warp-cont-list{
+            float:left;
+            width: 1000px;
+            height: 526px;
             overflow: hidden;
-
+        }
+        .md-warp-cont {
             li {
                 padding: 13px 13px 15px;
                 float: left;
@@ -129,55 +132,6 @@
                 }
             }
         }
-    }
-    /*公共侧边导航样式*/
-    .md-f-sidebar(){
-        .md-warp-sidebar {
-            float: left;
-            width: 190px;
-            height: 496px;
-
-            .warp-sidebar-bn {
-                float: left;
-                width: 190px;
-                height: 263px;
-            }
-            ul {
-                float: left;
-
-                li {
-                    border-top: 1px solid #fffafa;
-
-                    a {
-                        display: inline-block;
-                        width: 190px;
-                        height: 65px;
-                        line-height: 65px;
-                        text-align: center;
-                        font-size: 14px;
-                        color: #666;
-
-                        &:hover {
-                            color: #d11414;
-                            b{
-                                transform:scale(1.3);
-                                color: #d11414;
-                            }
-                        }
-                    }
-                    b {
-                        margin-right: 5px;
-                        display: inline-block;
-                        font-weight: normal;
-                        color: #555;
-                        transition:transform .2s linear;
-                    }
-                }
-            }
-        }
-    }
-    /*公共banner样式*/
-    .md-f-banner(){
         .md-warp-bn {
             float: left;
             width: 400px;
@@ -254,6 +208,60 @@
                 }
             }
         }
+    }
+    /*公共侧边导航样式*/
+    .md-f-sidebar(){
+        .md-warp-sidebar {
+            float: left;
+            width: 190px;
+
+            .warp-sidebar-bn {
+                float: left;
+                width: 190px;
+                height: 263px;
+            }
+            ul {
+                float: left;
+
+                li {
+                    border-top: 1px solid #fffafa;
+
+                    a {
+                        display: inline-block;
+                        width: 190px;
+                        height: 65px;
+                        line-height: 65px;
+                        text-align: center;
+                        font-size: 14px;
+                        color: #666;
+
+                        &:hover {
+                            color: #d11414;
+                            b{
+                                transform:scale(1.3);
+                                color: #d11414;
+                            }
+                        }
+                    }
+                    b {
+                        margin-right: 5px;
+                        display: inline-block;
+                        font-weight: normal;
+                        color: #555;
+                        transition:transform .2s linear;
+                    }
+                }
+                .cur a{
+                    color: #d11414;
+                    b{
+                        color: #d11414;
+                    }
+                }
+            }
+        }
+    }
+    /*公共banner样式*/
+    .md-f-banner(){
     }
 }
 
