--- a/static/src/less/index.less
+++ b/static/src/less/index.less
@@ -6,6 +6,9 @@
 .sprite {
     background: url(/static/src/img/sprite.png) no-repeat;
 }
+img{
+    // background:url(/static/src/img/zw.gif) no-repeat center;
+}
 .header {
     margin: 0 auto;
     width: 1190px;
@@ -666,7 +669,6 @@
                     float: left;
                     margin-right: 10px;
                     border-radius: 5px;
-                    background-color: #bec1c9;
                 }
                 .save-info {
                     display: inline-block;
