【提交】获取数据代码

--- a/static/src/css/index.css
+++ b/static/src/css/index.css
@@ -8,6 +8,9 @@
 .sprite {
   background: url(/static/src/img/sprite.png) no-repeat;
 }
+.loading {
+  background: url(/static/src/img/zw.gif) no-repeat center;
+}
 .header {
   margin: 0 auto;
   width: 1190px;
