--- a/static/src/less/index.less
+++ b/static/src/less/index.less
@@ -6,8 +6,8 @@
 .sprite {
     background: url(/static/src/img/sprite.png) no-repeat;
 }
-img{
-    // background:url(/static/src/img/zw.gif) no-repeat center;
+.loading{
+    background:url(/static/src/img/zw.gif) no-repeat center;
 }
 .header {
     margin: 0 auto;
