--- a/static/src/less/header.less
+++ b/static/src/less/header.less
@@ -279,6 +279,16 @@ body{overflow-x: hidden;}
           }
         }
       }
+      .cur{
+        background-color: #d11414;
+          span{
+            border-radius: 0;
+            color:#fff;
+            background-color: #d11414;
+            font-size:14px;
+            box-shadow: none;
+          }
+      }
       span{
         display:block;
         margin:0 auto;
