--- a/static/src/less/index.less
+++ b/static/src/less/index.less
@@ -187,7 +187,7 @@
         overflow: hidden;
     }
     &-cur img{ 
-        animation:scaleImg 2s linear forwards;
+        //animation:scaleImg 1s linear forwards;
     }
 }
 @keyframes scaleImg{
